Incorpore les modifs de Sébastien sur le texte principal: - Références historiques sur le Yaourt -Meilleure explication de ce qui se passe microscopiquement - Défini $e$ - Réissère les citations Darcy et Poiseuille - Remet Catherine, sans le Couette

--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -226,6 +226,23 @@
   Url                      = {http://dx.doi.org/10.1038/30193}
 }
 
+@Article{Braga2006,
+  Title                    = {{The effect of the glucono-$\delta$-lactone/caseinate ratio on sodium caseinate gelation}},
+  Author                   = {Braga, a. L M and Menossi, M. and Cunha, R. L.},
+  Journal                  = {Int. Dairy J.},
+  Year                     = {2006},
+  Pages                    = {389--398},
+  Volume                   = {16},
+
+  Abstract                 = {The influence of the acidification rate and the final pH on the properties of sodium caseinate gels (2-6\%, w/v) prepared by acidification with glucono-$\delta$-lactone (GDL) at 10°C was investigated. The rheological properties of the systems were analysed under shear at incipient gelation and under uniaxial compression throughout the entire gelation process. The water holding capacity (WHC) of these gels and their amount of soluble protein in different media were also evaluated. Up to \~{}50\% of the total $\kappa$-casein content was soluble in gels with a higher amount of GDL, and this contributed to the high WHC observed under this condition. The acidification rate did not affect the rheological properties measured under shear during gelation, but the GDL/caseinate ratio used had a significant effect on the steady-state properties. Fast acidification resulted in lower Young's modulus and stress at fracture values, but higher residual stress values and relaxation times. In contrast, slow acidification produced a more interconnected network probably because of the extensive reorganization or rearrangement within the segments near the isoelectric point.},
+  Doi                      = {10.1016/j.idairyj.2005.06.001},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2006/International Dairy Journal/Braga, Menossi, Cunha - 2006 - The effect of the glucono-$\delta$-lactonecaseinate ratio on sodium caseinate gelation.pdf:pdf},
+  ISSN                     = {09586946},
+  Keywords                 = {Acidification rate,Gel,Glucono-??-lactone,Sodium caseinate},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22}
+}
+
 @Article{Brau2011,
   Title                    = {{Multiple-length-scale elastic instability mimics parametric resonance of nonlinear oscillators}},
   Author                   = {Brau, Fabian and Vandeparre, Hugues and Sabbah, Abbas and Poulard, Christophe and Boudaoud, Arezki and Damman, Pascal},
@@ -681,12 +698,10 @@
   Doi                      = {10.1039/b516741h},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2006/Soft Matter/Genzer, Groenewold - 2006 - Soft matter with hard skin From skin wrinkles to templating and material characterization.pdf:pdf},
   ISSN                     = {1744-683X},
-  Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
   Url                      = {http://xlink.rsc.org/?DOI=b516741h}
 }
 
-@Article{Genzer2006,
+@Article{Genzer2006a,
   Title                    = {{Soft matter with hard skin: From skin wrinkles to templating and material characterization}},
   Author                   = {Genzer, Jan and Groenewold, Jan},
   Journal                  = {Soft Matter},
@@ -698,6 +713,8 @@
   Doi                      = {10.1039/b516741h},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2006/Soft Matter/Genzer, Groenewold - 2006 - Soft matter with hard skin From skin wrinkles to templating and material characterization.pdf:pdf},
   ISSN                     = {1744-683X},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.09},
   Url                      = {http://xlink.rsc.org/?DOI=b516741h}
 }
 
@@ -1205,8 +1222,7 @@
   Pages                    = {N30--5},
   Volume                   = {75},
 
-  Abstract                 = {UNLABELLED: Apparent viscosity and frequency sweep (G', G'') data for sodium caseinate dispersions with concentrations of approximately 18\% to 40\% w/w were obtained at 20 degrees C; colloidal glass behavior was exhibited by dispersions with concentration >or=23\% w/w. The high concentrations were obtained by mixing frozen powdered buffer with sodium caseinate in boiling liquid nitrogen, and allowing the mixtures to thaw and hydrate at 4 degrees C. The low-temperature G'-G'' crossover seen in temperature scans between 60 and 5 degrees C was thought to indicate gelation. Temperature scans from 5 to 90 degrees C revealed gradual decrease in G' followed by plateau values. In contrast, G'' decreased gradually and did not reach plateau values. Increase in hydrophobicity of the sodium caseinate or a decrease in the effective volume fraction of its aggregates may have contributed to these phenomena. The gelation and end of softening temperatures of the dispersions increased with the concentration of sodium caseinate. From an Eldridge-Ferry plot, the enthalpy of softening was estimated to be 29.6 kJ mol(-1).
-PRACTICAL APPLICATION: The results of this study should be useful for creating new products with high concentrations of sodium caseinate.},
+  Abstract                 = {UNLABELLED: Apparent viscosity and frequency sweep (G', G'') data for sodium caseinate dispersions with concentrations of approximately 18\% to 40\% w/w were obtained at 20 degrees C; colloidal glass behavior was exhibited by dispersions with concentration >or=23\% w/w. The high concentrations were obtained by mixing frozen powdered buffer with sodium caseinate in boiling liquid nitrogen, and allowing the mixtures to thaw and hydrate at 4 degrees C. The low-temperature G'-G'' crossover seen in temperature scans between 60 and 5 degrees C was thought to indicate gelation. Temperature scans from 5 to 90 degrees C revealed gradual decrease in G' followed by plateau values. In contrast, G'' decreased gradually and did not reach plateau values. Increase in hydrophobicity of the sodium caseinate or a decrease in the effective volume fraction of its aggregates may have contributed to these phenomena. The gelation and end of softening temperatures of the dispersions increased with the concentration of sodium caseinate. From an Eldridge-Ferry plot, the enthalpy of softening was estimated to be 29.6 kJ mol(-1). PRACTICAL APPLICATION: The results of this study should be useful for creating new products with high concentrations of sodium caseinate.},
   Doi                      = {10.1111/j.1750-3841.2009.01493.x},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2010/Journal of food science/Loveday et al. - 2010 - Rheological behavior of high-concentration sodium caseinate dispersions.pdf:pdf},
   ISSN                     = {1750-3841},
@@ -1262,10 +1278,7 @@ PRACTICAL APPLICATION: The results of this study should be useful for creating n
   Pages                    = {213--28},
   Volume                   = {94},
 
-  Abstract                 = {BACKGROUND AND AIMS: Soybean (Glycine max) is among the many legumes that are well known for 'hardseededness'. This feature can be beneficial for long-term seed survival, but is undesirable for the food processing industry. There is substantial disagreement concerning the mechanisms and related structures that control the permeability properties of soybean seed coats. In this work, the structural component that controls water entry into the seed is identified.
-METHODS: Six soybean cultivars were tested for their seed coat permeabilities to water. To identify the structural feature(s) that may contribute to the determination of these permeabilities, fluorescent tracer dyes, and light and electron microscopic techniques were used.
-KEY RESULTS: The cultivar 'Tachanagaha' has the most permeable seed coat, 'OX 951' the least permeable seed coat, and the permeabilities of the rest ('Harovinton', 'Williams', 'Clark L 67-3469', and 'Harosoy 63') are intermediate. All seeds have surface deposits, depressions, a light line, and a cuticle about 0.2 microm thick overlaying the palisade layer. In permeable cultivars the cuticle tends to break, whereas in impermeable seeds of 'OX 951' it remains intact. In the case of permeable seed coats, the majority of the cracks are from 1 to 5 micro m wide and from 20 to 200 micro m long, and occur more frequently on the dorsal side than in other regions of the seed coat, a position that correlates with the site of initial water uptake.
-CONCLUSIONS: The cuticle of the palisade layer is the key factor that determines the permeability property of a soybean seed coat. The cuticle of a permeable seed coat is mechanically weak and develops small cracks through which water can pass. The cuticle of an impermeable seed coat is mechanically strong and does not crack under normal circumstances.},
+  Abstract                 = {BACKGROUND AND AIMS: Soybean (Glycine max) is among the many legumes that are well known for 'hardseededness'. This feature can be beneficial for long-term seed survival, but is undesirable for the food processing industry. There is substantial disagreement concerning the mechanisms and related structures that control the permeability properties of soybean seed coats. In this work, the structural component that controls water entry into the seed is identified. METHODS: Six soybean cultivars were tested for their seed coat permeabilities to water. To identify the structural feature(s) that may contribute to the determination of these permeabilities, fluorescent tracer dyes, and light and electron microscopic techniques were used. KEY RESULTS: The cultivar 'Tachanagaha' has the most permeable seed coat, 'OX 951' the least permeable seed coat, and the permeabilities of the rest ('Harovinton', 'Williams', 'Clark L 67-3469', and 'Harosoy 63') are intermediate. All seeds have surface deposits, depressions, a light line, and a cuticle about 0.2 microm thick overlaying the palisade layer. In permeable cultivars the cuticle tends to break, whereas in impermeable seeds of 'OX 951' it remains intact. In the case of permeable seed coats, the majority of the cracks are from 1 to 5 micro m wide and from 20 to 200 micro m long, and occur more frequently on the dorsal side than in other regions of the seed coat, a position that correlates with the site of initial water uptake. CONCLUSIONS: The cuticle of the palisade layer is the key factor that determines the permeability property of a soybean seed coat. The cuticle of a permeable seed coat is mechanically weak and develops small cracks through which water can pass. The cuticle of an impermeable seed coat is mechanically strong and does not crack under normal circumstances.},
   Doi                      = {10.1093/aob/mch133},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2004/Annals of botany/Ma et al. - 2004 - Cracks in the palisade cuticle of soybean seed coats correlate with their permeability to water.pdf:pdf},
   ISSN                     = {0305-7364},
