--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -39,39 +39,38 @@ amsmath,amssymb,prl]{revtex4-1}
 \section*{Introduction}
 
 
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength \sseb{as discovered originally in aeronautics} \cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} \seb{and to date this confined situation remains without experimental equivalent.} \sseb{as for a free interface gravity dominates}
-\sseb{ over viscous substrate} \seb{Pas tr\`es clair, \`a reformuler~?}
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002}. Since in practice gravity sets the wavelength in such situation~\cite{Smoluchowski1927}, the wrinkling on a confined viscous substrate has not been studied experimentally.
 
-Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are \seb{naturally confined and }immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. \sseb{Such interplay is also at stake in daily life problems} 
-\sseb{such as wrinkles encountered while putting up}
-\sseb{ wall paper~\cite{Pacione1991}.} \seb{Therefore benchmark experiments that explore the possibility of wrinkling in confined soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.}
+Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation were a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. Therefore benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Leocmach2014} \seb{\it citer plutot une ref historique} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimeter scale. \seb{We systematically investigate such} swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} \seb{and in Supplemental Movies}, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle \seb{between two solid plates}. The two-dimensional nature of our experiment creates nested patterns that could prove useful to design original optical elements. \seb{\it Mettre plutot la phrase precedente en discussion/conclusion ?} In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario \seb{cannot explain the observations in Fig.~\ref{fig:dynamics}} and that only a wrinkling instability \seb{can be invoked}. 
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Bremer1989} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit wall is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimeter scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplemental Movies, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
 \begin{figure}[ht!]
 	\includegraphics{dynamics}
-	\caption{Dynamics of pattern formation \seb{in a confined film of casein gel}. (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}. \seb{\it Indiquer la composition du gel~?}}
+	\caption{Dynamics of pattern formation in a confined film of casein gel (caseinate 4\%w, GDL 4\%w). (a) Light transmission microscopy. The same area is highlighted in yellow on all panels to show that the initial pattern is not evolving. (b) 3D reconstruction from fluorescent confocal microscopy. (c) Fourier spectra of binary altitudes of (a) corresponding to primary, secondary and tertiary patterns. Inset: reconstructed binary altitudes at time \SI{2}{\hour}. Scale bars are \SI{1}{\milli\metre}.}
 	\label{fig:dynamics}
 \end{figure}
 
-The main goal of the present study is thus to identify the selection mechanism of the wavelength  \seb{and to discuss its implication for practical situations (?)}. In the following we first describe the physical chemistry that allows us to form such patterns. Then we  model the situation and identify two possible selection mechanisms, namely porous Darcy flow or viscous Poiseuille flow. Comparing our experimental data to these two models we finally show that \sseb{a model based on} a combination of both Darcy and Poiseuille mechanisms accurately describes our data. This combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength.
+The main goal of the present study is thus to identify the selection mechanism of the wavelength \seb{and to discuss its implication for practical situations (?)}. In the following we first describe the physical chemistry that allows us to form such patterns. Then we  model the situation and identify two possible selection mechanisms, namely porous Darcy flow or viscous Poiseuille flow. Comparing our experimental data to these two models we finally show that a combination of both Darcy and Poiseuille mechanisms accurately describes our data. This combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength.
 %Poiseuille~\cite{Poiseuille1842} flows of the solvent above and below the gel film for long wavelengths and a new mechanism, Darcy~\cite{Darcy1856} flows of the solvent through the gel film for short wavelengths.
 
 \section*{Pattern formation}
 
 \begin{figure}[b]
 	\includegraphics{acidification}
-	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. Horizontal line \seb{The horizontal line? \it je laisse comme ca dans tous les captions.} indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a half-coated microscopy cell with no adhesion to top wall, syn\ae{}resis and swelling allowed.}
+	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. The horizontal line indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a half-coated microscopy cell with no adhesion to top wall, syn\ae{}resis and swelling allowed.}
 	\label{fig:acidification}
 \end{figure}
 
 %discuter la figure 1c
 
-The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoeletric point weakens the gel \seb{due to \dots} \seb{\it Il manque une explication ici ainsi que des references generales sur la prise du yaourt}. This nonmonotonic behaviour of the elastic modulus translates into a nonmonotonic mesh size in a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. into syn\ae{}resis (solvent expulsion) followed by swelling.
+The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation~\cite{Bremer1989} (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoelectric point makes the casein aggregates swell (Supplemental Fig.~\ref{fig:nonmonotonic}), thus weakening the gel~\cite{Braga2006}. In a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall, this microscopic nonmonotonic behaviour translates into solvent expulsion out of the gel phase (syn\ae{}resis) followed by global swelling (Fig.~\ref{fig:acidification}c and Supplemental Fig.~\ref{fig:nonmonotonic}).
 
-Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (first panel Fig.~\ref{fig:sideview}a where black margins correspond to the glass walls), the gel forms and simultaneously expels solvent on both sides. Since two interfaces \seb{clearly separate} a protein-rich phase and a protein-poor phase, we model the resulting situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ \seb{in a cell of thickness $e=H_1+h+H_2$} (Fig.~\ref{fig:sideview}d) \seb{\it $e$ n'etait defini nulle part + attention sur la Fig.~3c il vaudrait mieux choisir de montrer $H_1$ et $H_2$ a un endroit ou le gel est horizontal, sinon le schema n'est valable qu'aux petites deformations + du coup ce sera it mieux de mettre le schema en 3b ?}. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}b) and excess surface area of the gel film (Fig.~\ref{fig:sideview}c). This confirms that the instability is due to swelling.
 
-Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given \seb{point in time and space} the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is \seb{therefore} not due to thickness inhomogeneities but to altitude gradients. \seb{Indeed} the length of the optical path along \seb{the vertical direction} $z$ through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}d.
+
+Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (first panel Fig.~\ref{fig:sideview}a where black margins correspond to the glass walls), the gel forms and simultaneously expels solvent on both sides. Since two interfaces clearly separate a protein-rich phase and a protein-poor phase, we model the resulting situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ in a cell of thickness $e=H_1+h+H_2$ (Fig.~\ref{fig:sideview}b). Wavelength being much larger than thickness, we can assume small strain in the film and lubrication in the layers. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the gel film (Fig.~\ref{fig:sideview}d). This confirms that the instability is due to swelling.
+
+Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given point in time and space the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is therefore not due to thickness inhomogeneities but to altitude gradients. Indeed the length of the optical path along the vertical direction $z$ through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}b.
 
 \begin{figure}
 	\includegraphics{sideview}
@@ -88,24 +87,24 @@ The characteristic length $\lambda^*$ of a wrinkling pattern is set by the compe
 \lambda^* \sim h \left(\frac{B}{\sigma_\perp}\right)^{1/3}.
 \label{eq:lstar}
 \end{equation}
-For small deflections the actual wavelength $\lambda$ is related to $\lambda^*$ and to the \seb{wrinkle} amplitude $A$ as $\lambda \sim A^{1/4} \lambda^{*3/4}$.
+For small deflections the actual wavelength $\lambda$ is related to $\lambda^*$ and to the wrinkle amplitude $A$ as $\lambda \sim A^{1/4} \lambda^{*3/4}$.
 
 % Pour Mathieu : ajouter quelque part des applications numériques pour les trois longueurs d'ondes gravité, Darcy, Poiseuille
 We identify three possible candidates for the transverse load $\sigma_\perp$: the weight or buoyancy of the gel, the porous flow through the gel or the viscous flows in the surrounding water layers. We confirmed that the former plays no significant role by successfully repeating our experiment in a cell held vertically, i.e. with the weight acting longitudinally rather than transversely.
 
 \begin{figure*}
 	\includegraphics{Darcy_vs_Poiseuille}
-	\caption{Comparing model predictions with measured wavelengths. Dots come from primary pattern, squares from secondary blisters. Dashed lines are the best linear fit through the origin taking only into account the points that should be (a) in Darcy mode $H<H^*$, (b) in Poiseuille mode $H>H^*$ (c) all points. Prefactors are 0.63, 0.69 and 0.67 respectively. Continuous line is the best affine fit ($\lambda_{\rm exp}=0.52\lambda_{P}+\SI{0.33}{\milli\metre}$) to all the points in (b). \seb{\it Mettre $\lambda_P$ et $\lambda_D$ comme dans le texte + $\lambda_{\rm mixed}$ ? Mettre tous les fits de la meme couleur (en gris ou en noir). Ajouter les textes ``porous model'', ``viscous model'' et ``mixed model'' (ou equivalent) sur les graphes.}}
+	\caption{Comparing model predictions with measured wavelengths. Dots come from primary pattern, squares from secondary blisters. Dashed lines are the best linear fit through the origin taking only into account the points that should be (a) in Darcy mode $H<H^*$, (b) in Poiseuille mode $H>H^*$ (c) all points. Prefactors are 0.63, 0.69 and 0.67 respectively. Continuous line is the best affine fit ($\lambda_{\rm exp}=0.52\lambda_{P}+\SI{0.33}{\milli\metre}$) to all the points in (b).}
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-In a first limit where the film of gel would be sitting without sticking to the bottom wall of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the pressure gradient, estimated as $\sigma_\perp/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+In a first limit where the film of gel would be sitting without sticking to the bottom wall of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law~\cite{Darcy1856} relates the pressure gradient, estimated as $\sigma_\perp/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
-where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the film and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection \seb{through Darcy flow}. However we note that the wavelength of a generation of the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition). \seb{\it La phrase precedente n'est pas assez claire et semble contredire le texte en supplementary : a reformuler.}
+where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the film and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection hrough Darcy flow. However we note that the wavelength of a generation of the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls. The relevant $\tau$ corresponds to the times it takes for the amplitude to saturate (see Supplementary Method for the precise definition).
 
-The opposite limiting case is when the gel film lies in the middle of the cell ($H_1=H_2$) and impermeable ($\alpha\rightarrow 0$). There destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the transverse load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
+The opposite limiting case is when the gel film lies in the middle of the cell ($H_1=H_2$) and impermeable ($\alpha\rightarrow 0$). There destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the transverse load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$~\cite{Poiseuille1842}. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
 \begin{equation}
 \lambda_P \sim (hH)^{1/2} \Upsilon^{1/6}
 \end{equation}
@@ -122,16 +121,19 @@ where $1/H^3 = 1/H_1^3 + 1/H_2^3$. The crossover between the two models where $\
 
 \section*{Experimental tests}
 
-The two above models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ \seb{together with estimates for} all the parameters involved in either model shall allow one to discriminate between them (see Supplementary Method for details on such measurements). As summarized in Supplementary Table~\ref{tab:data} we systematically varied (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter that we had no control upon was the initial altitude $H$ of the gel before wrinkling that varied randomly. However we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here \seb{the wavelength associated to the secondary} blister is taken as half of that of the primary pattern as shown in Fig.~\ref{fig:dynamics}c and $\tau$ is the variable parameter. \seb{\it Pas sur que la fin de cette phrase soit bien claire pour moi.}
+The two above models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them (see Supplementary Method for details on such measurements). As summarized in Supplementary Table~\ref{tab:data} we systematically varied (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter that we had no control upon was the initial altitude $H$ of the gel before wrinkling that varied randomly. However we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Fig.~\ref{fig:dynamics}c.
 
-Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. \seb{Although they provide the correct order of magnitude for $\lambda$,} neither model alone is able to \seb{quantitatively} reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to oversight \seb{\it ``oversight'' $\neq$ verbe: plutot ``oversee'' ?} the failure of the Poiseuille model at small wavelengths by adding an unexplained offset \seb{(dashed line in Fig.~\ref{fig:DarcyPoiseuille}b)}. Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
+Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset \seb{(dashed line in Fig.~\ref{fig:DarcyPoiseuille}b)}. Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
 
 \seb{\it Ajouter une conclusion.}
+%optical elements ?
+%wallpaper ?
+%role of gravity
 
 \section*{Methods summary}
 To prevent adsorption of caseins to surfaces, microscope slides and cover slips were cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) to which a polyacrylamide brush was polymerized from methacrylate groups.
-Sodium caseinate (Firmenich) was labelled with Dylight~550 NHS ESTER (Thermo Scientific) and then purified by centrifugation. \seb{\it vraiment ``purified''?} Unlabelled sodium caseinate powder was dissolved in deionised water (or water--glycerol mixture). To induce gelation glucono-$\delta$-lactone (GDL) in powder (Firmenich) was added to the solution. \SI{45}{\micro\litre} of this solution was immediately mixed with \SI{5}{\micro\litre} of labelled caseinate solution, \seb{stirred} and injected in the microscopy cell, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation could take place. 
-3D data were collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We used either a 10x (air) lens to measure the geometry of wrinkling (see Supplemental Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent \seb{confocal microscopy images} or by transmitted/reflected light macroscope (Nikkon SMZ745T/Leica DMS1000) were used to measure the wavelength of the primary pattern. Secondary pattern wavelength is set to half of the primary wavelength, according to Fig.~\ref{fig:dynamics}c.
+Sodium caseinate (Firmenich) was labelled with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye was removed by centrifugation. Unlabelled sodium caseinate powder was dissolved in deionised water (or water--glycerol mixture). To induce gelation glucono-$\delta$-lactone (GDL) in powder (Firmenich) was added to the solution. \SI{45}{\micro\litre} of this solution was immediately mixed with \SI{5}{\micro\litre} of labelled caseinate solution, stirred and injected in the microscopy cell, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation could take place. 
+3D data were collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We used either a 10x (air) lens to measure the geometry of wrinkling (see Supplemental Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) were used to measure the wavelength of the primary pattern (Supplementary Figure~\ref{fig:patterns}). Secondary pattern wavelength is set to half of the primary wavelength, according to Fig.~\ref{fig:dynamics}c.
 Data shown in Fig.~\ref{fig:acidification} a-b were obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar).
 
 \seb{\it Il y a pas mal de petits soucis dans la biblio : manque des page numbers ou refs a completer. Je joins un scan de mes notes pour ajuster le .bib.}
@@ -142,7 +144,7 @@ Data shown in Fig.~\ref{fig:acidification} a-b were obtained with a SevenCompact
 \paragraph*{Acknowledgements}
 Confocal experiments were conducted at SFR BioSciences Gerland - Lyon Sud (US8 / UMS3444).
 The authors thank José Bico, Arezeki Boudaoud, Cyprien Gay, L. Mahadevan and Olivier Pierre-Louis for theoretical insights at various stages of the research. 
-Precious experimental ideas came from Denis Bartolo, Elisabeth Bouchaud and Maxime Lefranc.
+Precious experimental ideas came from Catherine Barentin, Denis Bartolo, Elisabeth Bouchaud and Maxime Lefranc.
 Alan Parker at Firmenich provided the casein and GDL; 
 Special thanks to Madame Biot who made M.A. Biot work accessible through the \href{http://www.olemiss.edu/sciencenet/poronet/}{poronet} website. 
 ML thanks the Region Rhône Alpes and the Programme d'Avenir Lyon - Saint Etienne (PALSE NoGELPo) for postoctoral grant. 
